<resources>
    <string name="app_name">防疫資訊</string>
    <string name="dismiss">關閉</string>
    <string name="dial">撥打</string>
    <string name="dial_title">請詳讀以下資訊</string>
    <string name="dial_message">為避免增加藥局作業量，建議必要時再撥打；撥打前也請確認現在為營業時間。</string>
    <string name="dial_error">無法開啟電話簿</string>
    <string name="id_note_title">購買規則</string>
    <string name="option_empty">沒有了</string>
    <string name="option_warning">剩下不多</string>
    <string name="option_sufficient">數量充足</string>
    <string name="submit">送出</string>
    <string name="cancel">取消</string>
    <string name="version">版本 - %s</string>
    <string name="default_notification_channel_id">系統通知</string>
    <string name="option_number_ticket">使用號碼牌</string>
    <string name="option_not_number_ticket">未使用號碼牌</string>
    <string name="is_number_ticket">此藥局採用號碼牌制度，實際庫存可能與數字有所落差。更新資訊</string>
    <string name="is_not_number_ticket">此藥局未採用號碼牌制度。更新資訊</string>
    <string name="scan_permission_dialog_title">未取得相機權限</string>
    <string name="scan_permission_dialog_content">需要您的相機權限才有辦法進行掃描，請給予相機權限。</string>
    <string name="scan_permission_dialog_leave">離開</string>
    <string name="scan_permission_dialog_go_to_settings">前往設定</string>
    <string name="scan_no_permission">未取得權限，無法掃描</string>
    <string name="scan_unsupported_format">未支援此格式</string>
    <string name="scan_error">掃描錯誤</string>
    <string name="menu_scan">實聯掃描</string>
    <string name="menu_rapid_test">全國快篩站</string>
    <string name="menu_news">新聞稿</string>
    <string name="menu_mask_map">口罩地圖</string>
    <string name="dashboard_dialog_title">資料來源</string>
    <string name="dashboard_dialog_content">數據取自衛生福利部疾病管制署「COVID-19台灣最新病例、檢驗統計」之開放資料，每日更新一次。</string>
    <string name="dashboard_dialog_share_button">分享資訊</string>
    <string name="scan_sms_dialog_title">偵測到政府實聯制條碼</string>
    <string name="scan_sms_dialog_content">接下來將進行頁面跳轉，請開啟「簡訊」App 後，點擊傳送按鈕將簡訊送出即可。</string>
    <string name="scan_sms_dialog_next_button">下一步</string>
    <string name="scan_web_dialog_title">偵測到網址</string>
    <string name="scan_web_dialog_content">內容並非政府實聯制專屬條碼，可能是其他廠商之條碼，要繼續開啟嗎？</string>
    <string name="scan_web_browse_button">開啟</string>
    <string name="scan_dialog_dont_show">不要再顯示此訊息</string>
    <string name="scan_hint">請將方框對準 QR Code 條碼以掃描</string>
    <string name="dashboard_recovered">解除隔離</string>
    <string name="dashboard_death">死亡</string>
    <string name="dashboard_confirmed">確診數</string>
    <string name="dashboard_testings">通報數</string>
    <string name="dashboard_excluded">排除數</string>
    <string name="dashboard_new_confirmed">昨日確診</string>
    <string name="dashboard_new_testings">昨日通報</string>
    <string name="dashboard_new_excluded">昨日排除</string>
    <string name="dashboard_share_wording_yesterday" />
    <string name="dashboard_promotion">更多內容請參考防疫資訊 App：https://play.google.com/store/apps/details?id=com.jarvislin.drugstores</string>
    <string-array name="questions">
        <item>口罩存量怎麼來的？夠即時嗎？</item>
        <item>什麼情況下口罩存量會不準？</item>
        <item>如何有效運用口罩地圖？</item>
        <item>我是藥師，庫存數量錯誤如何校正？</item>
        <item>我是藥師，如何更新藥局備註資訊？</item>
    </string-array>
    <string-array name="answers">
        <item>目前販售口罩的藥局有跟健保署的主機連線，健保署主機每三分鐘會將藥局電腦的口罩存量更新到開放資料，提供給各界使用；本應用程式即是採用上述開放資料，每兩分鐘自動更新。</item>
        <item>最常遇到的狀況是：藥局採用號碼牌制度。例如：每日發放兩百個，當兩百個號碼牌發放完畢時，存量依然是兩百，因為藥局需將健保卡過卡後數量才會減少；在過卡之前，會誤以為還有庫存。建議確認藥局備註後再前往購買，切勿為難防疫第一線的藥局工作人員。</item>
        <item>看完藥局備註後，再決定要去哪間藥局。採用號碼牌制度的，可以於發放時間前往；未採用號碼牌的，則可以參考販售時間及即時數量。建議在地圖頁面點擊上方「查詢現在位置」，可以一口氣看完螢幕中所有藥局的資訊。</item>
        <item>如庫存數量需校正（如：口罩破損導致無法販售），請參考「防疫口罩管控系統」VPN 登錄作業使用者手冊第五頁進行負數校正。</item>
        <item>連線到 VPN 後進入「看診資料及掛號費」，「固定看診時段備註爛」可更新備註資料。</item>
    </string-array>
</resources>
