<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="12dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info" />

    <TextView
        android:id="@+id/textRecoveredTitle"
        style="@style/MenuDashboardTitle"
        android:layout_marginStart="16dp"
        android:visibility="invisible"
        android:layout_marginTop="12dp"
        android:text="@string/dashboard_recovered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRecoveredCount"
        style="@style/MenuDashboardValue"
        tools:text="12345"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textRecoveredTitle"
        app:layout_constraintTop_toBottomOf="@+id/textRecoveredTitle" />

    <TextView
        android:id="@+id/textDeathTitle"
        style="@style/MenuDashboardTitle"
        android:layout_marginStart="@dimen/dashboard_horizontal_margin"
        android:layout_marginTop="12dp"
        android:text="@string/dashboard_death"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDeathCount"
        style="@style/MenuDashboardValue"
        tools:text="12345"
        app:layout_constraintStart_toStartOf="@+id/textDeathTitle"
        app:layout_constraintTop_toBottomOf="@+id/textDeathTitle" />

    <TextView
        android:id="@+id/textConfirmedTitle"
        style="@style/MenuDashboardTitle"
        android:layout_marginTop="@dimen/dashboard_vertical_margin"
        android:text="@string/dashboard_confirmed"
        app:layout_constraintStart_toStartOf="@+id/textRecoveredTitle"
        app:layout_constraintTop_toBottomOf="@+id/textRecoveredCount" />

    <TextView
        android:id="@+id/textConfirmedCount"
        style="@style/MenuDashboardValue"
        tools:text="123"
        app:layout_constraintStart_toStartOf="@+id/textRecoveredTitle"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmedTitle" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textRecoveredTitle,textRecoveredCount,textConfirmedTitle,textConfirmedCount,textYesterdayConfirmedCount,textYesterdayConfirmedTitle" />

    <TextView
        android:id="@+id/textTestingTitle"
        style="@style/MenuDashboardTitle"
        android:layout_marginStart="@dimen/dashboard_horizontal_margin"
        android:layout_marginTop="@dimen/dashboard_vertical_margin"
        android:text="@string/dashboard_testings"
        app:layout_constraintStart_toEndOf="@+id/barrier1"
        app:layout_constraintTop_toBottomOf="@+id/textRecoveredCount" />

    <TextView
        android:id="@+id/textTestingCount"
        style="@style/MenuDashboardValue"
        tools:text="12345"
        app:layout_constraintStart_toStartOf="@+id/textTestingTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTestingTitle" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textTestingTitle,textTestingCount" />

    <TextView
        android:id="@+id/textExcludedTitle"
        style="@style/MenuDashboardTitle"
        android:layout_marginStart="@dimen/dashboard_horizontal_margin"
        android:layout_marginTop="@dimen/dashboard_vertical_margin"
        android:text="@string/dashboard_excluded"
        app:layout_constraintStart_toEndOf="@+id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/textRecoveredCount" />

    <TextView
        android:id="@+id/textExcludedCount"
        style="@style/MenuDashboardValue"
        tools:text="12345"
        app:layout_constraintStart_toStartOf="@+id/textExcludedTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTestingTitle" />

    <TextView
        android:id="@+id/textYesterdayConfirmedTitle"
        style="@style/MenuDashboardTitle"
        android:layout_marginTop="@dimen/dashboard_vertical_margin"
        android:text="@string/dashboard_new_confirmed"
        app:layout_constraintStart_toStartOf="@+id/textRecoveredTitle"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmedCount" />

    <TextView
        android:id="@+id/textYesterdayConfirmedCount"
        style="@style/MenuDashboardValue"
        tools:text="123"
        app:layout_constraintStart_toStartOf="@+id/textRecoveredTitle"
        app:layout_constraintTop_toBottomOf="@+id/textYesterdayConfirmedTitle" />


    <TextView
        android:id="@+id/textYesterdayTestingTitle"
        style="@style/MenuDashboardTitle"
        android:layout_marginStart="@dimen/dashboard_horizontal_margin"
        android:layout_marginTop="@dimen/dashboard_vertical_margin"
        android:text="@string/dashboard_new_testings"
        app:layout_constraintStart_toEndOf="@+id/barrier1"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmedCount" />

    <TextView
        android:id="@+id/textYesterdayTestingCount"
        style="@style/MenuDashboardValue"
        tools:text="12345"
        app:layout_constraintStart_toStartOf="@+id/textYesterdayTestingTitle"
        app:layout_constraintTop_toBottomOf="@+id/textYesterdayTestingTitle" />

    <TextView
        android:id="@+id/textYesterdayExcludedTitle"
        style="@style/MenuDashboardTitle"
        android:layout_marginStart="@dimen/dashboard_horizontal_margin"
        android:layout_marginTop="@dimen/dashboard_vertical_margin"
        android:text="@string/dashboard_new_excluded"
        app:layout_constraintStart_toEndOf="@+id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmedCount" />

    <TextView
        android:id="@+id/textYesterdayExcludedCount"
        style="@style/MenuDashboardValue"
        tools:text="12345"
        app:layout_constraintStart_toStartOf="@+id/textYesterdayExcludedTitle"
        app:layout_constraintTop_toBottomOf="@+id/textYesterdayTestingTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>